# ReCoDE-Segmentation-Lab

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt
01_creating_synthetic_3dimage/: index.html
02_thresholding/: index.html
03_distance_transform/: index.html
04_find_seedpoints/: index.html
05_watershed_segmentation/: index.html
06_quantitative_analysis/: index.html
07_complete_pipeline/: index.html
08_solutions_exercises/: index.html
debugging/: shape_creation.py  test_shape_regression.py  visual_example.py
imaging_data/spherical_particles/: Small particles_rec00000100.tif  Small particles_rec00000101.tif  Small particles_rec00000102.tif  Small particles_rec00000103.tif  Small particles_rec00000104.tif  Small particles_rec00000105.tif  Small particles_rec00000106.tif  Small particles_rec00000107.tif  (+92 more)
notebooks/: 01_creating_synthetic_3dimage.ipynb  02_thresholding.ipynb  03_distance_transform.ipynb  04_find_seedpoints.ipynb  05_watershed_segmentation.ipynb  06_quantitative_analysis.ipynb  07_complete_pipeline.ipynb  08_solutions_exercises.ipynb
search/: search_index.json
src/: 01_creating_synthetic_3dimage.ipynb  02_thresholding.ipynb  03_distance_transform.ipynb  04_find_seedpoints.ipynb  05_watershed_segmentation.ipynb  06_quantitative_analysis.ipynb  07_complete_pipeline.ipynb  image_processing.py  load_dataset.py  main_pipelin_libraries.py  main_pipeline.py  main_pipeline_comparison.py  pipeline_notebook.ipynb  shape_creation.py  visualisation.py
utils/: embed_images.py
(+9 files in other folders)
